# requests

./: BUILD_STEPS.md  CLEANUP_GUIDE.md  ChatGPT_Assistant.command  EMAIL_TEMPLATE.md  FINAL_CHECKLIST.md  GIT_SAFETY.md  INSTALL.md  INSTRUCTIONS.md  NEXT_STEPS.md  NEXT_STEPS_UPDATED.md  PREFLIGHT_CHECK.md  QUICK_START.md  README.md  SETUP_IMPROVEMENTS.md  SIMPLE_STEPS.md  SIMPLE_USER_GUIDE.md  TROUBLESHOOTING.md  VISUAL_GUIDE.md  app.py  build_app.command  build_app.py  build_release.sh  chatgpt_app.py  cleanup_branch.sh  config_manager.py  create_icon.sh  create_mac_app.sh  install.sh  make_executable.command  make_iconset.sh  package_mac_app.sh  package_validator.sh  pyproject.toml  requirements.txt  run_app.sh  setup.py  setup.sh  setup_and_build.sh  setup_improved.sh  simple_build.command  (+4 more)
src/: __init__.py  cli.py  keydetector.py
static/css/: style.css
templates/: base.html  home.html  new_inspection.html  view_inspection.html
tests/: test_keydetector.py
